# free_fermions

./: .gitignore  Cargo.toml  README.md  hpc_run.bash  makefile
data/: nam1.json  nam2.json
example_graphs/: readme.txt
hpc_environment/: apptainer.def  dockerfile
old_results/: e_structure_first_10.json  e_structure_first_13.json  e_structure_first_14.json  e_structure_first_15.json  e_structure_first_2.json  e_structure_first_20.json  e_structure_first_5.json  e_structure_first_6.json  e_structure_first_7.json  e_structure_first_8.json  e_structure_second_10.json  e_structure_second_11.json  e_structure_second_12.json  e_structure_second_13.json  e_structure_second_14.json  e_structure_second_15.json  e_structure_second_19.json  e_structure_second_6.json  e_structure_second_8.json  e_structure_second_9.json  erdos_renyi_1.json  erdos_renyi_10.json  erdos_renyi_14.json  erdos_renyi_16.json  erdos_renyi_17.json  erdos_renyi_7.json  lin_sparse_12.json  lin_sparse_15.json  lin_sparse_16.json  lin_sparse_17.json  lin_sparse_18.json  lin_sparse_19.json  lin_sparse_20.json  lin_sparse_3.json  lin_sparse_4.json  lin_sparse_5.json  periodic_square_lattice_1.json  periodic_square_lattice_10.json  periodic_square_lattice_12.json  periodic_square_lattice_13.json  (+23 more)
pysrc/: bounds.py  bricks.py  data_density_sizes.py  erdos_renyi.py  klocal.py  lattice.py  limit.py  lin_sparse.py  majorana.py  old_lattice.py  plot.py  plot_helper.py  sage_is_line_graph.py  sparse.py  testing.py  testing1.py  testing2.py  testing3.py  two_local.py  twod_square_lattice.py
src/: algorithms.rs  (+12 more)
(+228 files in other folders)
