[package]
name = "free_fermions"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15.6", default-features = false }
num = { version = "0.4.1", default-features = false }
rand = { version = "0.8.5", default-features = false, features = [
  "alloc",
  "getrandom",
] }
rand_pcg = { version = "0.3.1", default-features = false }
